# Options-Pricing-Visualizer

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
figures/: delta_surface.html  gamma_surface.html  vega_surface.html
results/: bs_vs_mc_table.md
scripts/: generate_figures.py  run_comparison.py
src/options_viz/: __init__.py  black_scholes.py  comparison.py  greeks.py  monte_carlo.py  normal.py  visualize.py
tests/: test_app.py  test_black_scholes.py  test_comparison.py  test_greeks.py  test_monte_carlo.py  test_normal.py  test_visualize.py
